--- a/style.css
+++ b/style.css
@@ -23,10 +23,28 @@ header li {
     text-align: center;
 }
 
+header a {
+    color: #78699A;
+    text-decoration: none;
+    transition: 0.2s ease-in-out;
+}
+
+header a:hover {
+    color: white;
+}
+
+/*header a.active {*/
+/*    color: white;*/
+/*}*/
+
 /* 메인 영역 css */
+#main_page {
+    height: 1080px;
+}
+
 .main_T{
     text-align: center;
-    margin: 235px 0 40px 0;
+    padding: 235px 0 50px 0;
 }
 .main_T h1 {
     font-size: 100px;
@@ -105,9 +123,10 @@ header li {
     }
 }
 
+
 /* 내 프로필 영역 css */
 #about_me_page {
-    height: 875px;
+    height: 1080px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -191,8 +210,6 @@ header li {
     }
 }
 
-
-
 /* 프로필 텍스트 관련 css */
 .about_me_T {
     width: 436px;
@@ -206,6 +223,7 @@ header li {
 
 .about_me_T p {
     font-size: 15px;
+    font-weight: 200;
     margin-bottom: 50px;
     line-height: 1.5;
 }
@@ -227,14 +245,188 @@ header li {
 
 .skills span {
     font-size: 15px;
-    background: #78699A;
-    padding: 5px 15px;
+    font-weight: 100;
+    text-align: center;
+    padding: 5px 16px;
     border-radius: 15px;
+}
+
+.sk1 {
+    background: rgba(120, 105, 154, 0.8);
+}
+
+.sk2 {
+    background: rgba(120, 105, 154, 0.5);
+}
+
+.sk3 {
+    background: rgba(120, 105, 154, 0.2);
 }
 
 /* 학력 */
 .education_T p {
-    font-size: 15px;
     margin-left: 10px;
     margin-bottom: 5px;
+}
+
+
+/* 프로젝트 영역 css */
+
+.project_box {
+    height: 1080px;
+    display: flex;
+    gap: 50px;
+    align-items: center;
+}
+
+.project_image {
+    width: 850px;
+    height: 478px;
+    border-radius: 20px;
+    background: #78699A;
+}
+.project_image.P1 {
+    background-image: url("img/porject_cat.gif");
+    background-size: cover;
+    background-position: center;
+}
+
+.project_image.P2 {
+    background-image: url("img/project_dot.gif");
+    background-size: cover;
+    background-position: center;
+}
+
+.project_image.P3 {
+    background-image: url("img/project_monster.gif");
+    background-size: cover;
+    background-position: center;
+}
+
+.project_image img:hover {
+    background: #402C4B;
+}
+
+/* 프로젝트 영역 텍스트 css */
+
+.project_T {
+    width: 420px;
+}
+
+.project_T h1 {
+    font-size: 48px;
+    margin-bottom: 30px;
+    font-weight: 500;
+}
+
+.project_T p {
+    font-weight: 200;
+}
+
+.project_more {
+    margin: 50px 0 50px 0;
+}
+
+.more {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 50px;
+}
+.more span {
+    margin-bottom: 10px;
+    font-weight: 200;
+}
+
+.project_T_Button {
+    display: flex;
+    gap: 65px;
+}
+
+.project_T button {
+    width: 165px;
+    height: 42px;
+    border-radius: 20px;
+    font-size: 20px;
+    color: white;
+    border: 0;
+    background: #78699A;
+    transition: 0.2s ease-in-out;
+}
+
+.project_T button:hover {
+    background: rgba(120, 105, 154, 0.5);
+}
+
+
+/* 콘택트 영역 css */
+
+#contact_page {
+    height: 960px;
+    display: flex;
+    align-items: center;
+}
+
+.contact_image_box {
+    position: relative;
+    overflow: hidden;
+    height: 310px;
+    width: 1320px;
+    background: #78699A;
+    border-radius: 20px;
+}
+
+.contact_image_T {
+    position: absolute;
+}
+.contact_image_T h1 {
+    margin: 50px 0 25px 101px;
+    font-size: 48px;
+    font-weight: 500;
+}
+
+.contact_image_T p {
+    margin-left: 101px;
+    font-weight: 200;
+}
+
+.contact_img {
+    display: flex;
+    justify-content: flex-end;
+    gap: 20px;
+    margin-right: 50px;
+}
+
+.contact_T {
+    margin: 50px 0 50px 50px;
+}
+.contact_P {
+    display: flex;
+    gap: 20px;
+}
+
+.CP1 {
+    margin-bottom: 55px;
+}
+
+.contact_P p {
+    font-size: 20px;
+    width: 500px;
+}
+
+.contact_P span {
+    font-weight: 200;
+}
+
+/* 콘텍트 유령 포지션 */
+
+.contact_1G {
+    position: absolute;
+    top: 45%;
+    right: 25.5%;
+}
+
+.contact_2G {
+    position: absolute;
+    top: 25%;
+    right: 7.5%;
 }
